--- a/index.html
+++ b/index.html
@@ -8,17 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="flex-container">
-        <div class="flex-item">1</div>
-        <div class="flex-item">2</div>
-        <div class="flex-item">3</div>
-        <div class="flex-item">4</div>
-        <div class="flex-item">5</div>
-        <div class="flex-item">6</div>
-        <div class="flex-item">7</div>
-        <div class="flex-item">8</div>
-        <div class="flex-item">9</div>
-        <div class="flex-item">10</div>
+    <div class="container">
+        Hola mundo
     </div>
 
    
