--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 </head>
 <body>
     <div class="container">
-        Hola mundo
+        <div class="item">1</div>
+        <div class="item">2</div>
+        <div class="item">3</div>
+        <div class="item">4</div>
+        <div class="item">5</div>
+
+    </div>
+
+    <div class="page">
+        <div class="main"></div>
+        <div class="aside"></div>
     </div>
 
    
