--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
-        <div class="item">4</div>
-        <div class="item">5</div>
+        <div class="item">Hola mudno</div>
+        <div class="item">Estudia en edteam</div>
+        <div class="item">Nuestros cursos en edteam</div>
+        
 
     </div>
 
