--- a/index.html
+++ b/index.html
@@ -8,23 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item discount">3</div>
-        <div class="item">4</div>
-        <div class="item discount">5</div>
-        
-
-    </div>
-
-    <div class="page">
-        <div class="main"></div>
-        <div class="aside"></div>
-    </div>
-
-   
-  
+    <div class="card">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGz6a4zqkW3M0sEMLIjyqI5ELFLOxRBEWmvlE9AfnVhdb5avhd-w" class="card__poster">
+        <p class="card__title">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nostrum dolore itaque voluptas nulla ullam quasi molestiae hic accusantium, ad iusto suscipit corrupti esse a minima vitae magnam dicta perferendis.
+        </p>
+    </div>  
     <script src="script.js"></script>
 </body>
 </html>
