--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="card">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRGz6a4zqkW3M0sEMLIjyqI5ELFLOxRBEWmvlE9AfnVhdb5avhd-w" class="card__poster">
-        <p class="card__title">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus nostrum dolore itaque voluptas nulla ullam quasi molestiae hic accusantium, ad iusto suscipit corrupti esse a minima vitae magnam dicta perferendis.
-        </p>
-    </div>  
+    <ul class="menu">
+        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
+        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
+        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
+        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
+        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
+        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
+        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
+        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
+        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
+        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
+    </ul>
     <script src="script.js"></script>
 </body>
 </html>
