--- a/index.html
+++ b/index.html
@@ -8,18 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <ul class="menu">
-        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
-        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
-        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
-        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
-        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
-        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
-        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
-        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
-        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
-        <li class="menu__item" > <a href="#" class="menu__link">Menu item</a> </li>
-    </ul>
+    <div class="banner">
+        <div class="banner__item"><p class="banner__title">Cursos</p></div>
+        <div class="banner__item"><p class="banner__title">Profesores</p></div>
+        <div class="banner__item"><p class="banner__title">Especialidades</p></div>
+        <div class="banner__item"><p class="banner__title">Suscribete</p></div>
+
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
